--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 discord.py==2.3.2
 python-dotenv==1.0.0
-langchain==0.1.4
-langchain-community==0.0.20
-langchain-openai==0.0.5
-tiktoken==0.5.2
+langchain==0.0.267
+langchain-openai==0.0.2
+langchain-community==0.0.10
+openai==0.28.0
 beautifulsoup4==4.12.2
 requests==2.31.0
 python-dateutil==2.8.2
-pgvector==0.2.3
 supabase==2.3.4
+gotrue==1.2.2
+postgrest==1.0.0
+realtime==1.0.1
+supafunc==0.3.0
+httpx==0.24.1
